# plesaty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
evaluator/: eval.py
src/: CMakeLists.txt  base.hpp  logger.hpp  main.cpp  parser.cpp  parser.hpp  sandbox.cpp  sequences.hpp  solver.cpp  solver.hpp
